-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
3
-
12273
Lustre: DEBUG MARKER: == sanity test 63a: Verify oig_wait interruption does not crash ========= 13:06:48 (1389690408)
LustreError: 14188:0:(ofd_grant.c:255:ofd_grant_space_left()) lustre-OST0010: cli 17a94b5b-8940-b62d-589f-082653aa3e82/ffff88003789e6c8 left 0 < tot_grant 34105472 unstable 0 pending 0
LustreError: 18856:0:(ofd_grant.c:255:ofd_grant_space_left()) lustre-OST0010: cli 17a94b5b-8940-b62d-589f-082653aa3e82/ffff88003789e6c8 left 0 < tot_grant 27814016 unstable 8388608 pending 8388608
LustreError: 18856:0:(ofd_grant.c:255:ofd_grant_space_left()) Skipped 26 previous similar messages
LustreError: 14178:0:(ofd_grant.c:255:ofd_grant_space_left()) lustre-OST0010: cli 17a94b5b-8940-b62d-589f-082653aa3e82/ffff88003789e6c8 left 0 < tot_grant 36505728 unstable 0 pending 0
LustreError: 14178:0:(ofd_grant.c:255:ofd_grant_space_left()) Skipped 33 previous similar messages
LustreError: 25596:0:(ofd_grant.c:255:ofd_grant_space_left()) lustre-OST0010: cli 17a94b5b-8940-b62d-589f-082653aa3e82/ffff88003789e6c8 left 3014656 < tot_grant 37619840 unstable 0 pending 0
LustreError: 25596:0:(ofd_grant.c:255:ofd_grant_space_left()) Skipped 57 previous similar messages
LustreError: 14192:0:(ofd_grant.c:255:ofd_grant_space_left()) lustre-OST0010: cli 17a94b5b-8940-b62d-589f-082653aa3e82/ffff88003789e6c8 left 3063808 < tot_grant 43010176 unstable 0 pending 0
LustreError: 14192:0:(ofd_grant.c:255:ofd_grant_space_left()) Skipped 65 previous similar messages
- is related to
-
LU-4664 sync write should consume grant on client
-
- Resolved
-