lustre/osd-ldiskfs/osd_internal.h
@@ -245,11 +245,7 @@ struct osd_device {
 
         cfs_proc_dir_entry_t     *od_proc_entry;
         struct lprocfs_stats     *od_stats;
-        /*
-         * statfs optimization: we cache a bit.
-         */
-        cfs_time_t                od_osfs_age;
-        struct obd_statfs         od_statfs;
+
 	spinlock_t		  od_osfs_lock;
 
 	int			  od_connects;
